# interspace

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: static.yml
data/: readme.md
data/Erithax/: Erithax.toml  ErithaxUi.toml
data/Linebender/: Linebender.toml
datamanager/: Cargo.toml
datamanager/src/lib/: tree.rs
doc/: svg.md
macroni/: Cargo.toml
macroni/src/: lib.rs
macroni/src/old/: oldlib.rs
res/state/: constellation.bincode  img_state.ron  stars.ron
res/static/script/: gridsizer.js
res/static/style/: dynatable.css  griddy.css  main.css  section.css
src/: common.rs  gfx.rs  image.rs  infoboard.rs  intergfx.rs  lang.rs  langbridge.rs  layout.rs  lib.rs  main.rs  owner.rs  platform.rs  render.rs  ui.rs
src/bowl/: block.rs  component.rs  constellation.rs  mod.rs  stage.rs  tree.rs
src/bowl/components/: gfxapi.rs  intergfx.rs  langbridge.rs  layout.rs  mod.rs  platform.rs  render.rs  ui.rs
src/bowl/filters/: component_type_filter.rs  mod.rs
src/datamanager/: datamanager.rs
src/dyna_tab/: block.rs  component.rs  constellation.rs  grid_sizer.rs  lang.rs  mod.rs  owner.rs  stage.rs  tree.rs
src/dyna_tab/components/: gfxapi.rs  intergfx.rs  langbridge.rs  layout.rs  mod.rs  paint.rs  platform.rs  raster.rs  render.rs  ui.rs
src/dyna_tab/filters/: component_id_filter.rs  component_type_filter.rs  mod.rs  owner_filter.rs  stage_filter.rs
src/old/: SECTION ATTEMPTS.rs  common0.rs  common1.rs  common2.rs  common3.rs  common4.rs  comp_generator.rs  dynatable_settings_attempt.rs  macroplay.rs  macroplay2.rs  mainEE.rs  mainEEE.rs  mainOO.rs
src/old/datamanager/: main.rs
src/old/datamanager2/: base.pest  block_base.pest  gfx.pest  intergfx.pest  lang.pest  langbridge.pest  layout.pest  main.rs  owner.pest  paint.pest  platform.pest  raster.pest  shell.pest  style.pest  ui.pest
src/swig/: block.rs  component.rs  constellation.rs  mod.rs  stage.rs  tree.rs
src/swig/components/: gfxapi.rs  intergfx.rs  langbridge.rs  layout.rs  mod.rs  platform.rs  render.rs  ui.rs
src/utils/: largebag.rs  mod.rs  popover.rs
