[package]
name = "interspace"
version = "0.1.0"
edition = "2021"


[dependencies]
macroni = {path = "./macroni"}

strum = "0.24.1"
strum_macros = "0.24.1"

dioxus = "0.4.0"
dioxus-web = "0.4.0"
#dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
#dioxus-web = { git = "https://github.com/dioxuslabs/dioxus.git" }

serde = "1.0.163"
dioxus-logger = "0.4.1"
image = "0.24.6"
sha2 = "0.10.6"
ron = "0.8.0"
async-std = "1.12.0"
log = "0.4.18"
num-integer = "0.1.45"
bincode = "1.3.3"
web-sys = {version="0.3.64", features = ["Window", "Document", "Element", "Attr", "MediaQueryList", "HtmlCollection", "MutationObserver", "CssStyleDeclaration", "DomTokenList"]}
lazy_static = "1.4.0"
wasm-timer = "0.2.5"
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
chrono = {version = "0.4.26", features = ["serde"]}
strsim = "0.10.0"
nucleo-matcher = "0.2.0"



