[package]
name = "macroni"
version = "0.1.0"
edition = "2021"


[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro-error = "1.0.4"
#ui-overview = {version = "0.1.0", path = ".\\..\\" }
proc-macro2 = "1.0.56"
quote = "1.0.27"
strsim = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
syn = "2.0.15"
